@@ -8,22 +8,12 @@ Here's how to initialize a git-lfs special remote on Github.
 
 	git annex initremote lfs type=git-lfs encryption=none url=git@github.com:yourname/yourrepo.git
 
-If you want git-annex to encrypt the objects it stores in the remote,
-change the encryption= parameter. But be sure to read the
-[[git-lfs special remote|special_remotes/git-lfs]] page's
-**encryption notes** first!
+In this example, the remote will not be encrypted, so anyone who can access
+it can see its contents. It is possible to encrypt everything stored in a
+git-lfs remote, see [[fully_encrypted_git_repositories_with_gcrypt]].
 
-To enable the same remote in another clone of the repository,
-you'll need to provide an url to it again. It's ok to provide a different
-url as long as it points to the same git-lfs repository.
-	
-	git annex enableremote lfs url=https://github.com/yourname/yourrepo.git
-
-Note that http urls currently only allow read access to the git-lfs
-repository.
-
-Once the remote is set up, you git-annex can store and retrieve content in
-the usual ways:
+Once the git-lfs remote is set up, git-annex can store and retrieve
+content in the usual ways:
 
 	git annex copy * --to lfs
 	git annex get --from lfs
@@ -33,3 +23,12 @@ because the protocol does not support deletion.
 
 A git-lfs special remote also functions as a regular git remote. You can
 use things like `git push` and `git pull` with it.
+
+To enable an existing git-lgs remote in another clone of the repository,
+you'll need to provide an url to it again. It's ok to provide a different
+url as long as it points to the same git-lfs repository.
+
+	git annex enableremote lfs url=https://github.com/yourname/yourrepo.git
+
+Note that http urls currently only allow read access to the git-lfs
+repository.
